fixed bug with view of shame skeletons on small screens

--- a/src/pages/latest/latest.module.css
+++ b/src/pages/latest/latest.module.css
@@ -1,9 +1,9 @@
 .main {
-  background-image: url('../../assets/images/light_background.png');
+  background-image: url("../../assets/images/light_background.png");
 }
 
 .introduction {
-  background-image: url('../../assets/images/head_background.png');
+  background-image: url("../../assets/images/head_background.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
@@ -18,7 +18,7 @@
 .breadcrumb-link-main {
   margin: 0;
   line-height: 24px;
-  font-family: 'e-Ukraine-Light';
+  font-family: "e-Ukraine-Light";
   color: rgb(239, 240, 243);
   font-size: 14px;
   line-height: 1.7em;
@@ -27,7 +27,7 @@
 .breadcrumb-link-current {
   margin: 0;
   line-height: 24px;
-  font-family: 'e-Ukraine-Light';
+  font-family: "e-Ukraine-Light";
   color: rgb(239, 240, 243, 0.7);
   font-size: 14px;
   line-height: 1.7em;
@@ -59,7 +59,7 @@
 
 .name {
   margin: 0;
-  font-family: 'e-Ukraine-Head-Bold';
+  font-family: "e-Ukraine-Head-Bold";
   font-size: 80px;
   color: var(--light-heading-color);
 
@@ -86,7 +86,7 @@
   margin: 0;
   width: 800px;
   text-align: center;
-  font-family: 'e-Ukraine-Light';
+  font-family: "e-Ukraine-Light";
   font-size: 24px;
   line-height: 1.7em;
   color: var(--light-text-color);
@@ -119,10 +119,6 @@
   gap: 30px;
   flex-wrap: wrap;
   overflow: hidden;
-
-  @media (max-width: 768px) {
-    flex-wrap: nowrap;
-  }
 }
 
 .shameCardsRewrite {
